fix whitespace and animation on desktop, remove arrows on mobile

--- a/src/components/styles/lookbookFront.scss
+++ b/src/components/styles/lookbookFront.scss
@@ -4,8 +4,9 @@
   animation-delay: -1s;
   background-size: cover;
   display: inline-block;
-  height: 100%;
+  height: 100vh;
   background-position: center top;
+  background-image: url('../../../public/static/test.jpg');
 }
 
 @mixin header {
@@ -32,7 +33,7 @@
 
 .lookbook-front {
   @include lookbook();
-  width: 600px;
+  min-width: 600px;
   transition: all 1s;
 
   &:hover {
@@ -64,28 +65,6 @@
     color: white;
     transform: rotate(90deg);
   }
-
-  // &:hover {
-  //   & .lookbook-front__header--animation {
-  //     transition: all 0.5s;
-  //     max-width: 0%;
-  //   }
-
-  //   & .lookbook-front__text--animation {
-  //     transition: all 0.5s;
-  //     max-width: 0%;
-  //   }
-  // }
-
-  // &:hover {
-  //   & .lookbook-front__text--placeholder {
-  //     visibility: hidden;
-  //   }
-  // }
-
-  // &:hover .lookbook-front-icons {
-  //   visibility: hidden;
-  // }
 }
 
 .lookbook-modal {
@@ -108,5 +87,6 @@
 @media (max-width: 450px) {
   .lookbook-front {
     width: 100%;
+    min-width: auto;
   }
 }
